<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id = "@+id/photo"
            android:layout_width="match_parent"

            android:layout_height="300dp" />
        <TextView
            android:id = "@+id/crop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "@string/txtLandpreparation"
            android:padding="10dp"/>
        <TextView
            android:id = "@+id/land_preparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "@string/txtPlanting"
            android:padding="10dp"/>
        <TextView
            android:id = "@+id/planting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "@string/txtCropmanagement"
            android:padding="10dp"/>
        <TextView
            android:id = "@+id/crop_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "@string/txtPestmanagement"
            android:padding="10dp"/>
        <TextView
            android:id = "@+id/pest_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/txtSeedrate"
            android:padding="5dp"
            android:onClick="Input"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/txtFertliser"
            android:padding="5dp"
            android:onClick="Input"/>

        <Button
            android:id = "@+id/btnMarketing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/txtMarketing"/>




    </LinearLayout>

</ScrollView>