<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputsActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/agric"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInputs"
        android:textSize="25dp"
        android:padding="5dp"/>

    <Spinner
        android:id = "@+id/crops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/crops"/>

    <EditText
        android:id = "@+id/etLandSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint = "Enter Land Size in hacters"/>

    <Button
        android:id = "@+id/btnCalculateInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/txtCalculateInputs"
        android:onClick="calculateInputs"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/txtInputsQuantity"
        android:padding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/txtCompoundD"/>

    <TextView
        android:id = "@+id/compoundD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/txtAmmoniumNitrate"/>

    <TextView
        android:id = "@+id/ammoniumNitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/txtSeeds"/>

    <TextView
        android:id = "@+id/seeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text=""/>


</LinearLayout>